--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
 	<title>ta</title>
 </head>
 <body>
-	<script type="module" src="index-vkbot.js"></script>
+	<script type="module" src="index.js"></script>
 </body>
 </html>
